Ugh fixed typo in settings.gradle file

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
 rootProject.name = 'aaaah'
-include ':library'
-include ':annotation'
-include ':compiler'
+include 'library'
+include 'annotation'
+include 'compiler'
