--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -17,5 +17,5 @@ dependencies {
     implementation "com.google.auto.service:auto-service:1.0-rc4"
     kapt "com.google.auto.service:auto-service:1.0-rc4"
 
-    implementation 'com.squareup:kotlinpoet:1.0.0-RC2'
+    compile 'com.squareup:javapoet:1.11.1'
 }
