--- a/annotation/build.gradle
+++ b/annotation/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'maven'
 
 group 'com.chrynan'
-version '0.1.30'
+version rootProject.ext.libraryVersion
 
 repositories {
     mavenCentral()
