--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -13,9 +13,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7"
 
     implementation project(':annotation')
-    
+
     implementation "com.google.auto.service:auto-service:1.0-rc4"
     kapt "com.google.auto.service:auto-service:1.0-rc4"
 
-    compile 'com.squareup:javapoet:1.11.1'
+    implementation 'com.squareup:javapoet:1.11.1'
+    implementation 'com.squareup:kotlinpoet:1.0.0-RC2'
 }
