--- a/libraryx/build.gradle
+++ b/libraryx/build.gradle
@@ -25,5 +25,6 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.recyclerview:recyclerview:1.0.0"
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    api project(':core')
 }
