--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,6 @@ include ':library', ':libraryx'
 include ':annotation'
 include ':compiler'
 include ':dsl'
+include ':core'
+
+enableFeaturePreview('GRADLE_METADATA')
