--- a/annotation/build.gradle
+++ b/annotation/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'maven'
 
-group 'com.chrynan'
+group rootProject.ext.libraryGroup
 version rootProject.ext.libraryVersion
 
 repositories {
