--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61"
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath 'digital.wup:android-maven-publish:3.6.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -32,25 +32,5 @@ allprojects {
     repositories {
         google()
         jcenter()
-    }
-}
-
-subprojects {
-    apply plugin: "maven-publish"
-    publishing {
-        repositories {
-            maven {
-                name = "GitHubPackages"
-                url = uri("https://maven.pkg.github.com/${libraryOwner}/${libraryRepo}")
-
-                credentials {
-                    username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
-                    password = project.findProperty("gpr.key") ?: System.getenv("KEY")
-                }
-            }
-        }
-        publications {
-
-        }
     }
 }
