--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'maven-publish'
 
 group rootProject.ext.libraryGroup
 version rootProject.ext.libraryVersion
@@ -18,4 +19,23 @@ dependencies {
 
     implementation 'com.squareup:javapoet:1.11.1'
     implementation 'com.squareup:kotlinpoet:1.0.0-RC2'
+}
+
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/${libraryOwner}/${libraryRepo}")
+
+            credentials {
+                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+                password = project.findProperty("gpr.key") ?: System.getenv("KEY")
+            }
+        }
+    }
+    publications {
+        gpr(MavenPublication) {
+            from(components.java)
+        }
+    }
 }
