--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'kotlin-multiplatform'
+apply plugin: 'maven-publish'
 
 group rootProject.ext.libraryGroup
 version rootProject.ext.libraryVersion
@@ -23,4 +24,21 @@ kotlin {
 
 configurations {
     compileClasspath
+}
+
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/${libraryOwner}/${libraryRepo}")
+
+            credentials {
+                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+                password = project.findProperty("gpr.key") ?: System.getenv("KEY")
+            }
+        }
+    }
+    publications {
+
+    }
 }
