Added more specific module names since github packages does not work correctly

--- a/annotation/build.gradle
+++ b/annotation/build.gradle
@@ -28,6 +28,7 @@ publishing {
     publications {
         gpr(MavenPublication) {
             from(components.java)
+            artifactId 'aaaah-annotation'
         }
     }
 }
