--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -36,6 +36,7 @@ publishing {
     publications {
         gpr(MavenPublication) {
             from(components.java)
+            artifactId 'aaaah-compiler'
         }
     }
 }
