--- a/libraryx/build.gradle
+++ b/libraryx/build.gradle
@@ -44,6 +44,7 @@ publishing {
     publications {
         gpr(MavenPublication) {
             from(components.android)
+            artifactId 'aaaah-libraryx'
         }
     }
 }
