Updated artifact and group names for Github Packages and bumped version to 0.4.0

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -42,5 +42,11 @@ publishing {
         kotlinMultiplatform {
             artifactId = "aaaah-core"
         }
+        jvm {
+            artifactId = "aaaah-core-jvm"
+        }
+        metadata {
+            artifactId = "aaaah-core-metadata"
+        }
     }
 }
