--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 ext {
-    libraryGroup = 'com.chrynan'
+    libraryGroup = 'com.chrynan.aaaah'
     libraryOwner = 'chrynan'
     libraryRepo = 'aaaah'
-    libraryVersion = '0.3.3'
+    libraryVersion = '0.4.0'
     libraryVersionCode = 1
 }
 
