--- a/annotation/build.gradle
+++ b/annotation/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
-apply plugin: 'maven-publish'
 
 group rootProject.ext.libraryGroup
 version rootProject.ext.libraryVersion
@@ -14,19 +13,8 @@ dependencies {
 }
 
 publishing {
-    repositories {
-        maven {
-            name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/${libraryOwner}/${libraryRepo}")
-
-            credentials {
-                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
-                password = project.findProperty("gpr.key") ?: System.getenv("KEY")
-            }
-        }
-    }
     publications {
-        gpr(MavenPublication) {
+        BintrayPub(MavenPublication) {
             from(components.java)
             artifactId 'aaaah-annotation'
         }
