--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 ext {
+    bintrayRepo = 'chrynan'
     libraryGroup = 'com.chrynan.aaaah'
     libraryOwner = 'chrynan'
     libraryRepo = 'aaaah'
     libraryVersion = '0.4.1'
     libraryVersionCode = 1
+    libraryVersionDescription = 'Second Major Release'
+    githubURL = 'https://github.com/chRyNaN/aaaah.git'
 }
 
-group 'com.chrynan'
+group libraryGroup
 version libraryVersion
 
 buildscript {
@@ -22,6 +25,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61"
         classpath 'digital.wup:android-maven-publish:3.6.2'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -33,4 +37,34 @@ allprojects {
         google()
         jcenter()
     }
+}
+
+subprojects {
+    apply plugin: 'maven-publish'
+    apply plugin: 'com.jfrog.bintray'
+
+    bintray {
+        user = project.findProperty("BINTRAY_USER") ?: System.getenv('BINTRAY_USER')
+        key = project.findProperty("BINTRAY_KEY") ?: System.getenv('BINTRAY_KEY')
+        pkg {
+            repo = rootProject.bintrayRepo
+            name = rootProject.libraryRepo
+            licenses = ['Apache-2.0']
+            vcsUrl = rootProject.githubURL
+            version {
+                name = rootProject.libraryVersion
+                desc = rootProject.libraryVersionDescription
+                released = new Date()
+                vcsTag = rootProject.libraryVersion
+            }
+        }
+    }
+
+    bintrayUpload.doFirst {
+        publications = publishing.publications.collect {
+            it.name
+        }
+    }
+
+    bintrayUpload.dependsOn publishToMavenLocal
 }
