--- a/dsl/build.gradle
+++ b/dsl/build.gradle
@@ -25,6 +25,7 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:recyclerview-v7:28.0.0"
+    implementation project(':core')
     implementation project(':library')
 }
 
