Updated Bintray to support Multiplatform Gradle metadata and bumpted version to 0.6.0

--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+import org.gradle.api.publish.maven.internal.artifact.FileBasedMavenArtifact
 
 ext {
     bintrayRepo = 'chrynan'
     libraryGroup = 'com.chrynan.aaaah'
     libraryOwner = 'chrynan'
     libraryRepo = 'aaaah'
-    libraryVersion = '0.5.0'
+    libraryVersion = '0.6.0'
     libraryVersionCode = 1
     libraryVersionDescription = 'Second Major Release'
     githubURL = 'https://github.com/chRyNaN/aaaah.git'
@@ -40,6 +40,7 @@ allprojects {
 }
 
 subprojects {
+    apply plugin: 'maven'
     apply plugin: 'maven-publish'
     apply plugin: 'com.jfrog.bintray'
 
@@ -62,6 +63,18 @@ subprojects {
 
     bintrayUpload.doFirst {
         publications = publishing.publications.collect {
+            File moduleFile = project.buildDir.toPath()
+                    .resolve("publications/${it.name}/module.json").toFile()
+
+            if (moduleFile.exists()) {
+                it.artifact(new FileBasedMavenArtifact(moduleFile) {
+                    @Override
+                    protected String getDefaultExtension() {
+                        return "module"
+                    }
+                })
+            }
+
             it.name
         }
     }
