--- a/dsl/build.gradle
+++ b/dsl/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:recyclerview-v7:28.0.0"
     implementation project(':core')
-    implementation project(':library')
+    implementation project(':libraryx')
 }
 
 publishing {
