--- a/annotation/build.gradle
+++ b/annotation/build.gradle
@@ -1,5 +1,5 @@
-apply plugin: 'kotlin'
-apply plugin: 'kotlin-kapt'
+apply plugin: "kotlin"
+apply plugin: "kotlin-kapt"
 
 group rootProject.ext.libraryGroup
 version rootProject.ext.libraryVersion
@@ -9,14 +9,14 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7"
 }
 
 publishing {
     publications {
         BintrayPub(MavenPublication) {
             from(components.java)
-            artifactId 'aaaah-annotation'
+            artifactId "aaaah-annotation"
         }
     }
 }
