--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -1,5 +1,5 @@
-apply plugin: 'kotlin'
-apply plugin: 'kotlin-kapt'
+apply plugin: "kotlin"
+apply plugin: "kotlin-kapt"
 
 group rootProject.ext.libraryGroup
 version rootProject.ext.libraryVersion
@@ -9,22 +9,22 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7"
 
-    implementation project(':annotation')
+    implementation project(":annotation")
 
     implementation "com.google.auto.service:auto-service:1.0-rc4"
     kapt "com.google.auto.service:auto-service:1.0-rc4"
 
-    implementation 'com.squareup:javapoet:1.11.1'
-    implementation 'com.squareup:kotlinpoet:1.0.0-RC2'
+    implementation "com.squareup:javapoet:1.11.1"
+    implementation "com.squareup:kotlinpoet:1.0.0-RC2"
 }
 
 publishing {
     publications {
         BintrayPub(MavenPublication) {
             from(components.java)
-            artifactId 'aaaah-compiler'
+            artifactId "aaaah-compiler"
         }
     }
 }
