--- a/dsl/build.gradle
+++ b/dsl/build.gradle
@@ -1,15 +1,15 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'digital.wup.android-maven-publish'
+apply plugin: "com.android.library"
+apply plugin: "kotlin-android"
+apply plugin: "digital.wup.android-maven-publish"
 
 group rootProject.ext.libraryGroup
 version rootProject.ext.libraryVersion
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         minSdkVersion 23
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode rootProject.ext.libraryVersionCode
         versionName rootProject.ext.libraryVersion
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -17,23 +17,23 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7"
     implementation "com.android.support:recyclerview-v7:28.0.0"
-    implementation project(':core')
-    implementation project(':libraryx')
+    implementation project(":core")
+    implementation project(":libraryx")
 }
 
 publishing {
     publications {
         BintrayPub(MavenPublication) {
             from(components.android)
-            artifactId 'aaaah-dsl'
+            artifactId "aaaah-dsl"
         }
     }
 }
