--- a/dsl/build.gradle
+++ b/dsl/build.gradle
@@ -24,9 +24,11 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7"
-    implementation "com.android.support:recyclerview-v7:28.0.0"
+
     implementation project(":core")
     implementation project(":libraryx")
+
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
 }
 
 publishing {
