--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,8 @@
+import com.chrynan.aaaah.buildSrc.LibraryConstants
 import org.gradle.api.publish.maven.internal.artifact.FileBasedMavenArtifact
 
-ext {
-    bintrayRepo = "chrynan"
-    libraryGroup = "com.chrynan.aaaah"
-    libraryOwner = "chrynan"
-    libraryRepo = "aaaah"
-    libraryVersion = "0.7.0"
-    libraryVersionCode = 2
-    libraryVersionDescription = "Second Major Release"
-    githubURL = "https://github.com/chRyNaN/aaaah.git"
-}
-
-group libraryGroup
-version libraryVersion
+group LibraryConstants.group
+version LibraryConstants.versionName
 
 buildscript {
     repositories {
@@ -44,15 +34,15 @@ subprojects {
         user = project.findProperty("BINTRAY_USER") ?: System.getenv("BINTRAY_USER")
         key = project.findProperty("BINTRAY_KEY") ?: System.getenv("BINTRAY_KEY")
         pkg {
-            repo = rootProject.bintrayRepo
-            name = rootProject.libraryRepo
-            licenses = ["Apache-2.0"]
-            vcsUrl = rootProject.githubURL
+            repo = LibraryConstants.bintrayRepo
+            name = LibraryConstants.repoName
+            licenses = [LibraryConstants.license]
+            vcsUrl = LibraryConstants.vcsUrl
             version {
-                name = rootProject.libraryVersion
-                desc = rootProject.libraryVersionDescription
+                name = LibraryConstants.versionName
+                desc = LibraryConstants.versionDescription
                 released = new Date()
-                vcsTag = rootProject.libraryVersion
+                vcsTag = LibraryConstants.versionName
             }
         }
     }
