--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -19,7 +19,7 @@ dependencies {
     kapt "com.google.auto.service:auto-service:1.0-rc4"
 
     implementation "com.squareup:javapoet:1.11.1"
-    implementation "com.squareup:kotlinpoet:1.0.0-RC2"
+    implementation "com.squareup:kotlinpoet:1.5.0"
 }
 
 publishing {
