--- a/core/build.gradle
+++ b/core/build.gradle
@@ -14,11 +14,15 @@ kotlin {
         commonMain {
             dependencies {
                 implementation "org.jetbrains.kotlin:kotlin-stdlib-common"
+
+                api "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:1.3.7"
             }
         }
         jvmMain {
             dependencies {
                 implementation "org.jetbrains.kotlin:kotlin-stdlib"
+
+                api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
             }
         }
     }
