--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url = uri("https://dl.bintray.com/chrynan/chrynan")
+        }
     }
 }
 
