--- a/core/build.gradle
+++ b/core/build.gradle
@@ -16,6 +16,8 @@ kotlin {
                 implementation "org.jetbrains.kotlin:kotlin-stdlib-common"
 
                 api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
+
+                api "com.chrynan.dispatchers:dispatchers:0.1.1"
             }
         }
     }
