--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 import com.chrynan.aaaah.buildSrc.LibraryConstants
-import org.gradle.api.publish.maven.internal.artifact.FileBasedMavenArtifact
 
 group LibraryConstants.group
 version LibraryConstants.versionName
@@ -9,64 +8,29 @@ buildscript {
         mavenCentral()
         google()
         jcenter()
+        maven { url = "https://repo.repsy.io/mvn/chrynan/public" }
+        maven { url = "https://dl.bintray.com/chrynan/chrynan" }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.21"
-        classpath "digital.wup:android-maven-publish:3.6.2"
-        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.31"
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.4.30"
+        classpath "com.chrynan.target:target-plugin:0.1.0"
     }
 }
+
+apply plugin: "org.jetbrains.dokka"
 
 allprojects {
     repositories {
         google()
         jcenter()
-        maven {
-            url = uri("https://dl.bintray.com/chrynan/chrynan")
-        }
+        maven { url = "https://repo.repsy.io/mvn/chrynan/public" }
+        maven { url = "https://dl.bintray.com/chrynan/chrynan" }
     }
 }
 
-subprojects {
-    apply plugin: "maven"
-    apply plugin: "maven-publish"
-    apply plugin: "com.jfrog.bintray"
-
-    bintray {
-        user = project.findProperty("BINTRAY_USER") ?: System.getenv("BINTRAY_USER")
-        key = project.findProperty("BINTRAY_KEY") ?: System.getenv("BINTRAY_KEY")
-        pkg {
-            repo = LibraryConstants.bintrayRepo
-            name = LibraryConstants.repoName
-            licenses = [LibraryConstants.license]
-            vcsUrl = LibraryConstants.vcsUrl
-            version {
-                name = LibraryConstants.versionName
-                desc = LibraryConstants.versionDescription
-                released = new Date()
-                vcsTag = LibraryConstants.versionName
-            }
-        }
-    }
-
-    bintrayUpload.doFirst {
-        publications = publishing.publications.collect {
-            File moduleFile = project.buildDir.toPath()
-                    .resolve("publications/${it.name}/module.json").toFile()
-
-            if (moduleFile.exists()) {
-                it.artifact(new FileBasedMavenArtifact(moduleFile) {
-                    @Override
-                    protected String getDefaultExtension() {
-                        return "module"
-                    }
-                })
-            }
-
-            it.name
-        }
-    }
-
-    bintrayUpload.dependsOn publishToMavenLocal
+// Documentation
+tasks.dokkaGfmMultiModule.configure {
+    outputDirectory.set(file("${projectDir.path}/docs"))
 }
