--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -2,6 +2,8 @@ import com.chrynan.aaaah.buildSrc.LibraryConstants
 
 apply plugin: "kotlin"
 apply plugin: "kotlin-kapt"
+apply plugin: "maven-publish"
+apply plugin: "org.jetbrains.dokka"
 
 group LibraryConstants.group
 version LibraryConstants.versionName
@@ -22,11 +24,30 @@ dependencies {
     implementation "com.squareup:kotlinpoet:1.5.0"
 }
 
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+
 publishing {
-    publications {
-        BintrayPub(MavenPublication) {
-            from(components.java)
-            artifactId "aaaah-compiler"
+    repositories {
+        maven {
+            url "https://repo.repsy.io/mvn/chrynan/public"
+
+            credentials {
+                username = project.findProperty("repsyUsername") ?: System.getenv("repsyUsername")
+                password = project.findProperty("repsyToken") ?: System.getenv("repsyToken")
+            }
+        }
+    }
+}
+
+// Documentation
+tasks.named("dokkaGfm") {
+    dokkaSourceSets {
+        configureEach {
+            includes.from("Module.md")
         }
     }
 }
