--- a/aaaah-android/build.gradle
+++ b/aaaah-android/build.gradle
@@ -26,10 +26,9 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
-    implementation project(":core")
-    implementation project(":libraryx")
+    api project(":aaaah-core")
 
     implementation "androidx.recyclerview:recyclerview:1.1.0"
 }
@@ -51,6 +50,7 @@ publishing {
             }
         }
     }
+
     publications {
         android.libraryVariants.all { variant ->
             "maven${variant.name.capitalize()}Aar"(MavenPublication) {
