--- a/aaaah-compiler/build.gradle
+++ b/aaaah-compiler/build.gradle
@@ -15,7 +15,7 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7"
 
-    implementation project(":annotation")
+    implementation project(":aaaah-annotation")
 
     implementation "com.google.auto.service:auto-service:1.0-rc4"
     kapt "com.google.auto.service:auto-service:1.0-rc4"
