--- a/aaaah-diff/build.gradle
+++ b/aaaah-diff/build.gradle
@@ -15,17 +15,14 @@ kotlin {
         ios()
     }
     sourceSets {
+        all {
+            languageSettings.enableLanguageFeature("InlineClasses")
+        }
         commonMain {
             dependencies {
                 implementation "org.jetbrains.kotlin:kotlin-stdlib-common"
 
-                api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
-
-                api "com.chrynan.dispatchers:dispatchers:0.1.1"
-
                 api "dev.andrewbailey.difference:difference:1.0.0"
-
-                api project(":aaaah-diff")
             }
         }
     }
